Fixed “Privacy & Terms” text overlapping issue on Share your Story section

--- a/wp-content/themes/delivering-happiness/assets/sass/global/_community.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_community.scss
@@ -150,3 +150,6 @@
         }
     }
 }
+#recaptcha_privacy {
+    display: none;
+}
